// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic example - calls custom resource lambda with correct props 1`] = `
{
  "IxQuicksightWorkspaceCustomResource": {
    "DeletionPolicy": "Delete",
    "Properties": {
      "ServiceToken": {
        "Ref": "SsmParameterValuesharedservicesquicksightworkspacelambdaArnC96584B6F00A464EAD1953AFF4B05118Parameter",
      },
      "app_name": "example-app",
    },
    "Type": "Custom::QuicksightWorkspace",
    "UpdateReplacePolicy": "Delete",
  },
}
`;

exports[`multi-bucket example - calls custom resource lambda with correct props 1`] = `
{
  "IxQuicksightWorkspaceCustomResource": {
    "DeletionPolicy": "Delete",
    "Properties": {
      "ServiceToken": {
        "Ref": "SsmParameterValuesharedservicesquicksightworkspacelambdaArnC96584B6F00A464EAD1953AFF4B05118Parameter",
      },
      "app_name": "example-app",
      "data_buckets": [
        "example-data-bucket-1",
        "example-data-bucket-2",
      ],
    },
    "Type": "Custom::QuicksightWorkspace",
    "UpdateReplacePolicy": "Delete",
  },
}
`;
